--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,10 @@ const value = "< Aditi Pawase />";
   @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
   @import url("https://fonts.googleapis.com/css2?family=Spirax&display=swap");
   @import url("https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap");
+  @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+
 </style>
 
 <html lang="en">
@@ -64,23 +68,42 @@ const value = "< Aditi Pawase />";
         <br />
         <br />
 
-        <div class="mt-20">
+        <!-- <div class="mt-20 justify-center pr-6 sm:mr-10">
           <pre
             class="text-center text-2xl font-sans sm:text-xl md:text-2xl lg:text-3xl">
-      Hii! I am Aditi.
-    </pre>
+            Hii! I am Aditi.
+        </pre>
 
           <br />
 
           <pre
             class="text-center text-lg sm:text-base md:text-lg lg:text-xl pl-8 sm:pl-4 md:pl-6 lg:pl-8">
-      I'm pre-final year Engineering student having interest in development. I love tea, development, 
-      japanese, and among others. Glad to have you here! Feel free to look around :)
-      <pre>
+            I'm pre-final year Engineering student having interest in development. I love tea, development, 
+            japanese, and among others. Glad to have you here! Feel free to look around :)
+          <pre>
         This is my canvas of thoughts, ideas, & inspirations.
-      </pre>
-    </pre>
+           </pre>
+        </pre>
+        </div> -->
+        <div class="flex flex-col items-center font-ibm_font mt-10 pr-4 sm:pr-6 lg:mt-16 lg:pr-24">
+          <!-- Greeting Text -->
+          <p class="text-center text-2xl  sm:text-xl md:text-2xl lg:text-3xl lg:leading-relaxed">
+            Hii! I am Aditi.
+          </p>
+        
+          <!-- Description -->
+          <p class="text-center  text-lg sm:text-base md:text-lg lg:text-xl mt-4 lg:mt-6 break-words max-w-4xl px-4">
+            I'm a pre-final year Engineering student having interest in development. I love tea, development, Japanese, and among others. Glad to have you here! Feel free to look around :)
+          </p>
+        
+          <!-- Canvas of thoughts -->
+          <p class="text-center text-lg sm:text-base md:text-lg lg:text-xl mt-2 lg:mt-4">
+            This is my canvas of thoughts, ideas, & inspirations.
+          </p>
         </div>
+        
+        
+        
       </div>
       <br />
     </div>
